<resources>
    <string name="app_name">FindCab</string>
    <string name="title_activity_panel">FindCab</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">%1$s! %1$s!</string>
    <string name="nav_header_subtitle">%1$s!</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_log_out">Cerrar sesión</string>
    <string name="title_activity_maps">Mapa</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Strings inicio sesion y registro-->

    <string name="btn_iniciar_sesion">Iniciar Sesión</string>
    <string name="btn_registrarse">Registrarse</string>


    <!--Strings de lateral panel-->
    <string name="opcion_cuenta">Cuenta</string>
    <string name="opcion_mapa">Mapa</string>
    <string name="opcion_historial">Historial</string>
    <string name="opcion_pendientes">Pendientes</string>


    <!--Strings interfaz mapa-->
    <string name="donde_desea_ir">  ¿Dónde desea ir?</string>
    <string name="btn_buscar">Buscar</string>
    <string name="btn_solicitar_taxu">Solicitar taxi</string>
    <string name="marcador_orgien">Usted está aquí</string>
    <string name="marcador_destino">Su destino</string>
    <string name="texto_busqueda_vacia">Ingrese su destino</string>


    <!--String AlertDialog Confirmacion carrera-->
    <string name="cabecera_dialog">Confirmación</string>
    <string name="txt_origen">Origen: </string>
    <string name="txt_destino">Destino: </string>
    <string name="txt_distancia">Distancia: </string>
    <string name="valor_a_pagar">Valor a pagar</string>
    <string name="btn_cancelar_carrera">Cancelar</string>
    <string name="btn_aceptar_carrera">Confirmar</string>
    <string name="no_tiene_tarjetas">Sin tarjetas</string>


    <!--Strings sobre conexion a internet-->
    <string name="conexion_internet">No tiene conexión a internet</string>


    <!-- Strings para login -->
    <string name="login_username">Usuario</string>
    <string name="login_password">Contraseña</string>
    <string name="login_sign_in">Entrar</string>

    <!-- Login Fragment -->
    <string name="sign_up_question">¿No tienes una cuenta?</string>
    <string name="sign_in_error_feedback">Hubo un error, intenta de nuevo por favor.</string>

    <!-- Auth Fragment -->
    <string name="sign_in_face">Reconocimiento facial</string>
    <string name="sign_in_auth_error_feedback">@string/sign_in_error_feedback</string>
    <string name="sign_in_auth_logged_success">Inicio de sesión exitoso!</string>
    <string name="sign_in_auth_logging_in">Comprobando datos...</string>
    <string name="sign_in_auth_logged">Bienvenido %1$s!</string>

    <!-- String para registro -->
    <string name="sign_up_name">Nombre</string>
    <string name="sign_up_last_name">Apellido</string>
    <string name="sign_up_mobile">Celular</string>
    <string name="sign_up_username">@string/login_username</string>
    <string name="sign_up_password">@string/login_password</string>
    <string name="sign_up_email">Correo electrónico</string>
    <string name="sign_up_btn">Registrarse</string>
    <string name="signed_up">Registrado exitosamente!</string>
    <string name="sign_up_error_feedback">@string/sign_in_error_feedback</string>
    <string name="sign_up_field_error">Hay campos vacíos</string>
    <string name="sign_up_credit_card">Tarjeta de Crédito</string>

    <!-- Strings para diálogo de creción/edición de tarjetas de crédito -->
    <string name="credit_card_dialog_tarjeta">Tarjeta de Crédito</string>
    <string name="credit_card_dialog_compania">Tipo</string>
    <string name="credit_card_dialog_numero">Número</string>
    <string name="credit_card_dialog_codigo">Código de seguridad</string>
    <string name="credit_card_dialog_vencimiento">Fecha de vencimiento</string>
    <string name="credit_card_dialog_slash">/</string>
    <string name="credit_card_dialog_ok">Aceptar</string>
    <string name="credit_card_dialog_cancel">Cancelar</string>

    <string-array name="array_tarjetas">
        <item>Elija el tipo</item>
        <item>Mastercard</item>
        <item>Visa</item>
        <item>American Express</item>
    </string-array>

    <!-- Fragmento Usuario -->
    <string name="usuario_frag_editar">Editar</string>
    <string name="usuario_frag_guardar">Guardar</string>
    <string name="usuario_frag_tarjetas">Tarjetas de Crédito</string>
    <string name="usuario_frag_tarjetas_anadir">Añadir tarjeta </string>
    <string name="usuario_frag_tarjetas_exito">Tarjeta añadida con éxito</string>
    <string name="usuario_frag_tarjetas_fallo">Falló al añadir tarjeta</string>
    <string name="usuario_frag_tarjetas_exito_upd">Tarjeta actualizada con éxito</string>
    <string name="usuario_frag_tarjetas_fallo_upd">Falló al actualizar tarjeta</string>
    <string name="usuario_frag_tarjetas_exito_del">Tarjeta eliminada con éxito</string>
    <string name="usuario_frag_tarjetas_fallo_del">Falló al eliminar tarjeta</string>


    <!--Strings de RV Pendientes-->
    <string name="boton_ver_mas">Más</string>
    <string name="boton_emitir_pago">Pagar</string>

    <!--Strings de RV Historial-->
    <string name="boton_eliminar_recorrido">Eliminar</string>

    <!--String AlertDialog Detalle recorridos en Pendiente e Historial-->
    <string name="cabecera_detalle_recorrido">Detalle</string>
    <string name="campo_fecha">Fecha</string>
    <string name="campo_conductor">Conductor</string>
    <string name="boton_compartir">Compartir</string>

    <!-- Cierre de sesión -->
    <string name="log_out_title">Cerrar sesión</string>
    <string name="log_out_content">¿Seguro desea cerrar sesión?</string>
    <string name="log_out_yes">Sí</string>
    <string name="log_out_no">No</string>

    <string name="loading">Cargando contenido</string>
    <string name="delete_data_que">¿Eliminar datos?</string>

    <!-- Actualización de datos de cliente-->
    <string name="update_cliente_error">Error al actualizar datos</string>
    <string name="update_cliente_error_img">Error al actualizar imagen</string>
    <string name="update_cliente_success">Datos actualizados</string>
    <string name="update_question">¿Desea guardar los cambios?</string>
    <string name="update_state">Actualizando datos ...</string>


</resources>
