<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_cuenta"
            android:icon="@drawable/ic_user_circle_solid"
            android:title="@string/opcion_cuenta" />
        <item
            android:id="@+id/nav_mapa"
            android:icon="@android:drawable/ic_dialog_map"
            android:title="@string/opcion_mapa" />
        <item
            android:id="@+id/nav_pendientes"
            android:icon="@drawable/ic_clock_solid"
            android:title="@string/opcion_pendientes" />
        <item
            android:id="@+id/nav_historial"
            android:icon="@drawable/ic_history_solid"
            android:title="@string/opcion_historial" />
        <item
            android:id="@+id/nav_log_out"
            android:title="@string/action_log_out"
            android:icon="@drawable/ic_sign_out_alt_solid" />
    </group>


</menu>
