<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rel_card_dialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteX="8dp"
    tools:layout_editor_absoluteY="8dp">


        <TextView
            android:id="@+id/textView_card_dialog_compania"
            android:layout_width="72dp"
            android:layout_height="34dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="31dp"
            android:layout_marginTop="33dp"
            android:text="@string/credit_card_dialog_compania"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/imgView_card_dialog_compania"
            android:layout_width="70dp"
            android:layout_height="38dp"
            android:layout_alignParentTop="true"
            android:layout_alignStart="@+id/textView_card_dialog_compania"
            android:layout_marginTop="71dp"
            app:srcCompat="@drawable/ic_credit_card_solid" />

        <Spinner
            android:id="@+id/spinner_card_dialog_compania"
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:layout_alignTop="@+id/imgView_card_dialog_compania"
            android:layout_toEndOf="@+id/editText_card_dialog_codigo" />

        <TextView
            android:id="@+id/textView_card_dialog_numero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignStart="@+id/textView_card_dialog_compania"
            android:layout_marginTop="121dp"
            android:text="@string/credit_card_dialog_numero"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editText_card_dialog_numero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignStart="@+id/textView_card_dialog_compania"
            android:layout_marginTop="153dp"
            android:ems="10"
            android:inputType="number" />

        <TextView
            android:id="@+id/textView_card_dialog_codigo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignStart="@+id/textView_card_dialog_compania"
            android:layout_marginTop="211dp"
            android:text="@string/credit_card_dialog_codigo"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editText_card_dialog_codigo"
            android:layout_width="79dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignStart="@+id/textView_card_dialog_compania"
            android:layout_marginTop="250dp"
            android:ems="10"
            android:inputType="number" />

        <TextView
            android:id="@+id/textView_card_dialog_vencimiento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignStart="@+id/textView_card_dialog_compania"
            android:layout_marginTop="300dp"
            android:text="@string/credit_card_dialog_vencimiento"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editText_card_dialog_mes"
            android:layout_width="49dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignStart="@+id/textView_card_dialog_compania"
            android:layout_marginTop="335dp"
            android:ems="10"
            android:inputType="number" />

        <EditText
            android:id="@+id/editText_card_dialog_anio"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignTop="@+id/editText_card_dialog_mes"
            android:layout_marginStart="117dp"
            android:layout_marginTop="335dp"
            android:ems="10"
            android:inputType="number" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_alignEnd="@+id/textView_card_dialog_compania"
            android:layout_alignParentTop="true"
            android:layout_alignTop="@+id/editText_card_dialog_mes"
            android:layout_marginTop="335dp"
            android:text="@string/credit_card_dialog_slash"
            android:textSize="26sp" />

</RelativeLayout>
